# autoppia_web_agents_subnet

./: .env.miner-example  .env.validator-example  .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  sonar-project.properties
.github/: copilot-instructions.md  dependabot.yml
.github/scripts/: pip_audit_count.py
.github/workflows/: codeql.yml  dependency-review.yml  quality-checks.yml  sonarcloud.yml
autoppia_web_agents_subnet/: __init__.py  bittensor_config.py  protocol.py
autoppia_web_agents_subnet/base/: miner.py  neuron.py  validator.py
autoppia_web_agents_subnet/base/utils/: config.py  misc.py  weight_utils.py
autoppia_web_agents_subnet/miner/: cli.py  help.py  service.py  utils.py
autoppia_web_agents_subnet/miner/cli/: __init__.py  _common.py  chutes.py  github.py  payment.py
autoppia_web_agents_subnet/opensource/: sandbox_manager.py  utils_docker.py  utils_git.py
autoppia_web_agents_subnet/opensource/gateway/: __init__.py  config.py  main.py  models.py  requirements.txt
autoppia_web_agents_subnet/platform/: client.py  mixin.py  models.py
autoppia_web_agents_subnet/platform/utils/: __init__.py  iwa_core.py  round_flow.py  task_flow.py
autoppia_web_agents_subnet/utils/: __init__.py  commitments.py  dendrite.py  env.py  hippius_ipfs.py  ipfs_client.py  log_colors.py  logging.py  logging_filter.py  random.py  s3_client.py  weights_version.py
autoppia_web_agents_subnet/validator/: config.py  models.py  penalties.py  round_manager.py  season_manager.py
autoppia_web_agents_subnet/validator/evaluation/: mixin.py  penalties.py  rewards.py  stateful_cua_eval.py  tasks.py  topk.py
autoppia_web_agents_subnet/validator/payment/: __init__.py  helpers.py
autoppia_web_agents_subnet/validator/reporting/: __init__.py  mixin.py
autoppia_web_agents_subnet/validator/round_start/: mixin.py  synapse_handler.py
autoppia_web_agents_subnet/validator/settlement/: consensus.py  mixin.py  rewards.py
autoppia_web_agents_subnet/validator/visualization/: round_table.py  stats.py  weights_table.py
docs/advanced/: consensus_validator_system.md
neurons/: miner.py  validator.py
scripts/: run_sonar_local.sh  run_tests_local.sh
scripts/miner/: eval_github.py
scripts/validator/: prewarm_gateway.py
scripts/validator/demo-webs/: install_docker.sh
scripts/validator/main/: install_dependencies.sh
scripts/validator/reporting/: resend_report.py  setup_logs.sh  setup_round_logs.sh  show_commitments.py
scripts/validator/update/: update_all.sh  update_webs_demo.sh
scripts/validator/utils/: alert_admins.py  simple_log_splitter.py  simple_log_splitter_v2.py
tests/: conftest.py  test_protocol.py
tests/base/: __init__.py
tests/base/utils/: __init__.py  test_misc.py  test_weight_utils.py
tests/fixtures/: miner_fixtures.py  mock_fixtures.py  task_fixtures.py  validator_fixtures.py
tests/utils/: __init__.py  test_commitments.py  test_env.py  test_ipfs_client.py  test_log_colors.py  test_logging_filter.py  test_miner_cli_payment.py  test_random.py  test_weights_version.py
tests/validator/: test_penalties.py
tests/validator/error_handling/: test_edge_cases.py  test_error_injection.py
tests/validator/evaluation/: test_rewards.py  test_topk.py
tests/validator/integration/: test_complete_round.py  test_multi_round.py
tests/validator/performance/: test_consensus_scale.py  test_evaluation_scale.py
tests/validator/property/: test_consensus_aggregation_property.py  test_reward_distribution_property.py  test_round_boundaries_property.py
tests/validator/scenarios/: README.md  test_best_run_scenarios.py  test_iwap_finish_round_scenarios.py  test_leader_and_weight_scenarios.py  test_post_consensus_scenarios.py  test_reuse_and_payload_scenarios.py  test_round_phases_scenarios.py  test_round_regressions.py  test_version_bump_artifact_scenarios.py
tests/validator/scenarios/iwap_finish_rounds/: test_iwap_finish_round_scenarios.py
tests/validator/scenarios/iwap_start_rounds/: test_iwap_start_round_scenarios.py
tests/validator/unit/: test_batch_evaluations.py  test_batch_evaluations_integration.py  test_consensus.py  test_evaluation_mixin.py  test_hippius_storage.py  test_iwap_integration.py  test_payment.py  test_platform_mixin_helpers.py  test_round_log_capture.py  test_round_manager.py  test_round_start_mixin.py  test_sandbox_manager.py  test_season_manager.py  test_settlement_mixin.py  test_settlement_rewards.py  test_stateful_cua_eval.py  test_synapse_handler.py  test_validator_forward.py
